<resources>
    <string name="app_name">Organizze</string>
    <string name="text_caption_intro_1">Organize suas contas \nde onde estiver.</string>
    <string name="text_description_intro_1">Simple, fácil de usar e grátis</string>
    <string name="text_caption_intro_2">Saiba para onde está indo seu dinheiro</string>
    <string name="text_description_intro_2">Categorizando seus lançamentos e vendo o \ndestino de cada centavo</string>
    <string name="image_description">Image description</string>
    <string name="text_caption_intro_3">Nunca mais esqueça de \npagar uma conta</string>
    <string name="text_description_intro_3">Receba alertas quando quiser</string>
    <string name="text_description_intro_4">Use no seu smartphone e acessando o \nOrganizze pelo site</string>
    <string name="text_caption_intro_4">Tudo organizado, \nno celular ou computador</string>
    <string name="text_caption_intro_cadastro">Crie sua conta grátis</string>
    <string name="ja_tenho_conta_text">Já tenho conta</string>
    <string name="cadastre_se_button_text">Cadastre-se</string>
    <string name="text_description_intro_cadastro">Junte-se a mais de meio milhão \nde pessoas e comece já</string>
    <string name="text_caption_cadastroAc">Crie sua conta grátis</string>
    <string name="nome_plainText_text">Nome</string>
    <string name="email_plainText_text">Email</string>
    <string name="senha_plainText_text">Senha</string>
    <string name="cadastrar_buttonText_cadastroAc">Cadastrar</string>
    <string name="termos_de_usoText_cadastroAC">Termos de uso</string>
    <string name="text_caption_loginAc">Acesse sua conta</string>
    <string name="entrar_buttonText_loginAc">Entrar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="value_text_hint">R$ 0,00</string>
    <string name="data_text_hint">Data: 01/01/2022</string>
    <string name="categoria_text_hint">Categoria: Salário</string>
    <string name="descricao_text_hint">Descrição: Salário mensal</string>
    <string name="saldo_geral">Saldo geral</string>
    <string name="valor_inicial_content_printipal">R$ 0</string>
    <string name="carregando_text">Carregando...</string>
    <string name="sair_text">Sair</string>
    <string name="titulo">Titulo</string>
    <string name="categoria">Categoria</string>
    <string name="valor">valor</string>
</resources>