<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSaudacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carregando_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_inicial_content_printipal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo_geral"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mcv_selectionColor="#00F"
        app:mcv_showOtherDates="all"
        app:mcv_tileSize="50dp">

    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMovimentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>